established basic card aesthetic, will resume after fixing seedfile which has some pictures not showing or on the wrong food item

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -35,7 +35,7 @@
   display: flex;
   flex-direction: column;
   height: 100px;
-  width: 1068px;
+  width: 60%;
   justify-content: center;
 }
 
@@ -43,4 +43,17 @@
   display: flex;
   flex-direction:row;
   justify-content: space-between;
+
+  h3 {
+    font-size: 28px;
+  }
+}
+
+.menu-items-container {
+  padding: 60px;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 60px;
 }
